@@ -10,6 +10,7 @@ quelea (2015.0) stable; urgency=normal
   * New feature - Song translations can now be exported to PDF
   * New feature - Videos can now auto-play on being set live
   * New feature - Schedule can now auto-advance when an item is sent live
+  * New feature - Item can be automatically previewed on image change
   * Bugfix - Quick Edit now works properly
   * Bugfix - FX UI element labels are now translated (such as colours)
   * Bugfix - Translations now show properly when section headings are used
@@ -24,4 +25,4 @@ quelea (2015.0) stable; urgency=normal
   * Bugfix - Partial translations now display properly
   * Various other minor bugfixes
 
- -- Michael Berry <michael@quelea.org>  Thursday, 23 Oct 2014 00:00:00 +0000
+ -- Michael Berry <michael@quelea.org>  Friday, 24 Oct 2014 00:00:00 +0000
